test/samples/invalid/resolving/local_global_shadow.maruir
struct M {
    b: bool;

}
fun foo(a: uint8) 
locals M: uint8;
{

}